--- a/main.css
+++ b/main.css
@@ -142,6 +142,7 @@ html {
     margin: 0 -16px 0 0;
     color: #7E7E82;
     letter-spacing: -0.2px;
+    text-align: center;
 }
 
 .service-list__item--active {
