--- a/main.css
+++ b/main.css
@@ -58,15 +58,15 @@ html {
 }
 
 
-.header__menu {
+.menu {
     background: url(/The-first-layout/img/menu.svg) no-repeat center;
 }
 
-.header__support {
+.support {
     background: url(/The-first-layout/img/support.svg) no-repeat center;
 }
 
-.header__search {
+.search {
     background: url(/The-first-layout/img/search.svg) no-repeat center;
 }
 
@@ -248,15 +248,15 @@ html {
         margin: 24px -16px 32px;
     }
 
-    .header__phone {
+    .phone {
         background: url(/The-first-layout/img/phone.svg) no-repeat center;
     }
 
-    .header__message {
+    .message {
         background: url(/The-first-layout/img/message.svg) no-repeat center;
     }
 
-    .header__personal {
+    .personal {
         background: url(/The-first-layout/img/personal.svg) no-repeat center;
     }
 
@@ -361,14 +361,6 @@ html {
         color: hsl(230, 10%, 12%);
         font-weight: 500;
         cursor: pointer;
-    }
-
-    .button-block__support {
-        background: url(/The-first-layout/img/support.svg) no-repeat center;
-    }
-
-    .button-block__search {
-        background: url(/The-first-layout/img/search.svg) no-repeat center;
     }
 
     .button-block__button--pink {
