--- a/main.css
+++ b/main.css
@@ -173,7 +173,7 @@ html {
   display: none;
 }
 
-.read-more-button {
+.main__read-more-button {
   background: none;
   border: none;
   font-weight: 500;
@@ -186,7 +186,7 @@ html {
   gap: 16px;
 }
 
-.read-more-button::before {
+.main__read-more-button::before {
   content: "";
   width: 8px;
   height: 11px;
